--- a/Demo/demo.ipynb
+++ b/Demo/demo.ipynb
@@ -33,7 +33,7 @@
         "from keras.preprocessing import image\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "import numpy as np\n",
-        "from test import *"
+        "from .test import *"
       ],
       "execution_count": 3,
       "outputs": []
@@ -80,8 +80,8 @@
         "id": "bl6Omzmbv1JK"
       },
       "source": [
-        "base_model = tf.keras.models.load_model('base_model.h5')\n",
-        "model = tf.keras.models.load_model('model.h5')"
+        "base_model = tf.keras.models.load_model('./models/base_model.h5')\n",
+        "model = tf.keras.models.load_model('./models/model.h5')"
       ],
       "execution_count": 5,
       "outputs": []
@@ -193,7 +193,7 @@
         "outputId": "97e256af-3c68-4124-9a12-c86c0a2df56f"
       },
       "source": [
-        "path = '/content/Unknown.png'\n",
+        "path = './Images(Readme)/Unknown.png'\n",
         "predict(base_model, path)\n",
         "predict(model, path)"
       ],
